Fixed image spacing.

--- a/style/elsinore.css
+++ b/style/elsinore.css
@@ -457,5 +457,5 @@ ul li.add-to-cart {padding:0 5px;}
 /** Undo fixed width from Dynamo **/
 /**.pane-library_feature_list ul.item-list li { width: auto; } **/
 
-.view-library-staff-list table td { width:150px;height:190px; }
+.view-helbib-library-staff-list table td { width:150px;height:190px; }
 
